PharmaDemo/src/objects/SFDC_Expense_Header__c.object
<CustomObject>
    <description>Individual expense reports.</description>
    <fields>
        <fullName>Line_Items__c</fullName>
        <label>Line Items</label>
        <summaryForeignKey>SFDC_Expense_Line_Item__c.Expense_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Finance/Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <summarizedField>SFDC_Expense_Line_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>SFDC_Expense_Line_Item__c.Expense_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <label>Expense Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyRejectedExpenseReports</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Week_Ending__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Rejected Expense Reports</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MySubmittedExpenseReports</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Week_Ending__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <label>My Submitted Expense Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EXP-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Expense Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <recordTypes>
        <fullName>NewExpense</fullName>
        <active>true</active>
        <label>New Expense</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>